# clangd-test

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  Makefile  gcc-arm-none-eabi.cmake  linkerscript.ld
src/: main.c
